--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
       margin: 20px;
     }
 
+    .item-container {
+        cursor: auto;
+    }
+
+    .item {
+        cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -61,7 +68,7 @@
 
   <input type="text" id="searchInput" placeholder="Search items...">
 
-  <div id="container">
+  <div id="container" class="item-container" onmouseover="changeCursor('pointer')" onmouseout="changeCursor('auto')">
     <!-- Sample item -->
     <div class="item" onclick="redirectToLink('https://www.pandabuy.com/product?url=https%3A%2F%2Fweidian.com%2Fitem.html%3FitemID%3D5416187188?inviteCode=8AJ7KXC6F')">
         <img src="Images\Products\shoes\aj4.jpg" alt="Air Jordan 4">
@@ -103,19 +110,19 @@
         </div>
     </div>
 
-    <div class="item" onclick="redirectToLink('https://www.pandabuy.com/product?ra=352&url=PJ8avyWKZSzUDdrSwxop0PCAPXnbjUovPdoH5%252B8Mi3EgfTF4ceHeRLFqaMveeNOvD2OOb6AQzFsiiKvoVH7RfAsIzNrMEWVb9pNCaQ%253D%253D?inviteCode=8AJ7KXC6F')">
-        <img src="Images\Products\shoes\dnkslow.jpg" alt="Nike Dunk Low (40+ Styles)">
+    <div class="item" onclick="redirectToLink('https://pandabuy.com/product?ra=962&url=https://shop1621765644.v.weidian.com/item.html?itemID=4466742144?inviteCode=8AJ7KXC6F')">
+        <img src="Images\Products\shoes\dnkslow.jpg" alt="Nike Dunk Low (27+ Styles)">
         <div class="item-content">
             <h3>Nike Dunk Low (40+ Styles)</h3>
-            <p>Price: CNY ¥380.00</p>
+            <p>CNY ¥ 190.0 ≈ $ 28.74</p>
         </div>
     </div>
 
-    <div class="item" onclick="redirectToLink('https://www.pandabuy.com/product?url=PJ2c4NFN4isn%252Fva%252FBc2OMHBDECFSY%252Fqfh9wtpCI1FOXY9%252FzZl1g%252FoCVwPEDGCrbx7r6PMuJB1diu7dpL3STgVcj2MWuPR3zmH1TeUw%253D%253D?inviteCode=8AJ7KXC6F')">
+    <div class="item" onclick="redirectToLink('https://www.pandabuy.com/product?url=PJ2c4NFN4isn%252Fva%252FBc2OMHBDECFSY%252Fqfh9wtpCI1FOXY9%252FzZl1g%252FoCVwPEDGCrbx7r6PMuJB1diu7dpL3STgVcj2MWuPR3zmH1TeUw%253D%253D&spider_token=4572&inviteCode=inviteCode=8AJ7KXC6F')">
         <img src="Images\Products\shoes\airmax95.jpg" alt="Air Max 95">
         <div class="item-content">
             <h3>Air Max 95</h3>
-            <p>Price: CNY ¥380.00</p>
+            <p>CNY ¥ 160.0 ≈ $ 24.21</p>
         </div>
     </div>
 
@@ -123,7 +130,7 @@
         <img src="Images\Products\shoes\airmaxplus.jpg" alt="Air Max Plus (22 Styles)"">
         <div class="item-content">
             <h3>Air Max Plus (22 Styles)</h3>
-            <p>Price: CNY ¥380.00</p>
+            <p>CNY ¥ 169.0 ≈ $ 25.57</p>
         </div>
     </div>
     
@@ -131,7 +138,7 @@
         <img src="Images\Products\shoes\vmp.jpg" alt="Air VaporMax Plus (26 Styles)"">
         <div class="item-content">
             <h3>Air VaporMax Plus (26 Styles)</h3>
-            <p>Price: CNY ¥380.00</p>
+            <p>CNY ¥ 179.0 ≈ $ 27.08</p>
         </div>
     </div>  
 
@@ -139,7 +146,7 @@
         <img src="Images\Products\shoes\aj1.jpg" alt="Jordan 1 High (29 Styles)"">
         <div class="item-content">
             <h3>Jordan 1 High (29 Styles)</h3>
-            <p>Price: CNY ¥380.00</p>
+            <p>CNY ¥ 250.0 ≈ $ 37.82</p>
         </div>
     </div>
 
@@ -163,6 +170,10 @@
         }
       }
     });
+
+    function changeCursor(cursorType) {
+        document.querySelector('.item-container').style.cursor = cursorType;
+    }
   </script>
 
 </body>
