--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
 <body>
 
   <header>
-    <h1>Pandabuy Spreadsheet by @pandajohny</h1>
+    <h1>Pandabuy Spreadsheet by <a href="https://tiktok.com/@pandajohny" style="color: green; text-decoration: none;" target="_blank">@pandajohny</a></h1>
+
+
   </header>
 
   <input type="text" id="searchInput" placeholder="Search items...">
@@ -149,6 +151,48 @@
             <p>CNY ¥ 250.0 ≈ $ 37.82</p>
         </div>
     </div>
+
+    <div class="item" onclick="redirectToLink('https://pandabuy.allapp.link/cmt606ggpf6s14i6hgjg')">
+      <img src="Images\Products\shoes\yeezy_slides.jpg" alt="Yeezy Slides (18 Styles)"">
+      <div class="item-content">
+          <h3>Yeezy Slides (18 Styles)</h3>
+          <p>CNY ¥ 110.0 ≈ $ 16.64</p>
+      </div>
+    </div>
+
+    <div class="item" onclick="redirectToLink('https://pandabuy.allapp.link/cmt62lggpf6s14i6hh4g')">
+      <img src="Images\Products\shoes\rnr.jpg" alt="Yeezy Foam RNNR (16 Styles)">
+      <div class="item-content">
+          <h3>Yeezy Foam RNNR (16 Styles)</h3>
+          <p>CNY ¥ 145.0 ≈ $ 21.94</p>
+      </div>
+    </div>
+
+    <div class="item" onclick="redirectToLink('https://pandabuy.allapp.link/cmt61eggpf6s14i6hgsg')">
+      <img src="Images\Products\shoes\bapesta.jpg" alt="Bape Bapestas (15 Styles)"">
+      <div class="item-content">
+          <h3>Bape Bapestas (15 Styles)</h3>
+          <p>CNY ¥ 149.0 ≈ $ 22.54</p>
+      </div>
+    </div>
+
+    <div class="item" onclick="redirectToLink('https://pandabuy.allapp.link/cmt64cggpf6s14i6hhfg')">
+      <img src="Images\Products\shoes\diorb30.jpg" alt="Dior B30 (10 Styles)">
+      <div class="item-content">
+          <h3>Dior B30 (10 Styles)</h3>
+          <p>CNY ¥ 630.0 ≈ $ 95.31</p>
+      </div>
+    </div>
+
+    <div class="item" onclick="redirectToLink('https://pandabuy.allapp.link/cmt64p9rogtum2sv3eug')">
+      <img src="Images\Products\shoes\croc.jpg" alt="Crocs (7 Styles)">
+      <div class="item-content">
+          <h3>Crocs (7 Styles)</h3>
+          <p>CNY ¥ 35.00 ≈ $ 5.30</p>
+      </div>
+    </div>
+
+    
 
   </div>
 
