--- a/index.html
+++ b/index.html
@@ -192,6 +192,14 @@
       </div>
     </div>
 
+    <div class="item" onclick="redirectToLink('https://pandabuy.allapp.link/cmuf8togpf6s14i6oha0')">
+      <img src="Images\Products\northpuffer.jpg" alt="Cheap North Face Puffer">
+      <div class="item-content">
+          <h3>Cheap North Face Puffer</h3>
+          <p>CNY ¥ 142.0 ≈ € 19.78</p>
+      </div>
+    </div>
+
     
 
   </div>
