--- a/index.html
+++ b/index.html
@@ -200,6 +200,21 @@
       </div>
     </div>
 
+    <div class="item" onclick="redirectToLink('https://pandabuy.allapp.link/cmufcp1rogtum2svah50')">
+      <img src="Images\Products\trapstar.jpg" alt="Trapstar Reflective Bag">
+      <div class="item-content">
+          <h3>Trapstar Reflective Bag</h3>
+          <p>CNY ¥ 109.0 ≈ $ 16.52</p>
+      </div>
+    </div>
+
+    <div class="item" onclick="redirectToLink('https://pandabuy.allapp.link/cmufe41rogtum2svahf0')">
+      <img src="Images\Products\ea7.jpg" alt="Armani EA7 Jacket">
+      <div class="item-content">
+          <h3>Armani EA7 Jacket</h3>
+          <p>CNY ¥ 245 ≈ $ 37.12</p>
+      </div>
+    </div>
     
 
   </div>
