--- a/index.html
+++ b/index.html
@@ -215,6 +215,14 @@
           <p>CNY ¥ 245 ≈ $ 37.12</p>
       </div>
     </div>
+
+    <div class="item" onclick="redirectToLink('https://pandabuy.allapp.link/cn1r6490b4mgcummqri0')">
+      <img src="Images\Products\bb.jpg" alt="2020-2021 Black Barcelona Kit">
+      <div class="item-content">
+          <h3>2020-2021 Black Barcelona Kit</h3>
+          <p>CNY ¥ 50 ≈ € 7.03</p>
+      </div>
+    </div>
     
 
   </div>
